Modifica la gestione degli errori nel Lexer e aggiorna il file .gitignore